Work out z-index bugs

--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -21,7 +21,8 @@
 	width: 20%;
   height: 100%;
   margin-top: 20px;
-	box-shadow: 0px 3px 35px 1px rgba(0, 0, 0, 0.19);
+	box-shadow: 8px 10px 27px -1px rgba(0, 0, 0, 0.12);
+  z-index: 2;
 }
 
 a {
